css/map.css
html, body, #map_canvas {
	margin: 0;
	padding: 0;
	height: 100%;
	width: 100%;
}
#map {
	padding-top: 55px;
	height: calc( 100% );
	width: 100%;
	min-height: 625px;
}
h1 {
	margin-bottom: 8px;
	font-weight: 300;
	font-size: 20px;
}
.markerPop {
}
.customMarker {
	position: absolute;
	padding: 5px;
	border: 1px solid black;
	bottom: 60px;
	right: 50px;
	width: 410px;
	height: 300px;
	background: white;
	box-shadow: 2px 2px 1px #888888;
}
.toggles h2, .customMarker h2 {
	margin: 0;
	padding: 2px;
	font-family: Gill Sans, Gill Sans MT, Myriad Pro, DejaVu Sans Condensed, Helvetica, Arial, " sans-serif";
	font-size: 14px;
	font-weight: bold;
	background: black;
	color: white;
	margin-bottom: 3px;
	text-align: left;
}
.customMarker a {
	color: black;
	font-weight: bold;
}
.toggles {
	position: absolute;
	padding: 5px;
	border: 1px solid black;
	top: 60px;
	right: 50px;
	width: 300px;
	height: 250px;
	background: white;
	box-shadow: 2px 2px 1px #888888;
}
/* Check Boxes */
	
	  
.checkBoxSlider input[type=checkbox] {
	visibility: hidden;
}
.checkBoxSlider {
	width: 60px;
	height: 20px;
	background: #333;
	border-radius: 25px;
	position: relative;
	display: inline-block;
}
.checkBoxSlider:before {
	content: 'On';
	position: absolute;
	top: 4px;
	left: 6px;
	height: 1px;
	color: #26ca28;
	font-size: 8px;
}
.checkBoxSlider:after {
	content: 'Off';
	position: absolute;
	top: 4px;
	left: 42px;
	height: 1px;
	color: #ff0000;
	font-size: 8px;
}
.checkBoxSlider label {
	display: block;
	width: 26px;
	height: 11px;
	border-radius: 25px;
	transition: all .5s ease;
	cursor: pointer;
	position: absolute;
	top: 4px;
	z-index: 1;
	left: 6px;
	background: #ddd;
}
.checkBoxSlider input[type=checkbox]:checked + label {
	left: 30px;
	background: #26ca28;
}

